added forget password page

--- a/Registration.html
+++ b/Registration.html
@@ -82,6 +82,13 @@
 			<td><input type="reset" value="Reset"></td>
 			<td><input type="submit" value="Submit"></td>
 		</tr>
+
+		<tr>
+			<td><a href="login.html">Login</a></td>
+		</tr>
+		<tr>
+			<td><a href="forgetpassword.html">forgetpassword</a></td>
+		</tr>
 	</table>
 </fieldset>
 </form>
