--- a/login.html
+++ b/login.html
@@ -29,12 +29,12 @@
             </tr>
             <tr>
                 <td>
-                    <a href="registration.html">Registration Account</a>
+                    <a href="Registration.html">Registration Account</a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="forget password.html">Forget Password</a>
+                    <a href="forgetpassword.html">Forget Password</a>
                 </td>
             </tr>
         </table>
