--- a/form.html
+++ b/form.html
@@ -1,14 +1,83 @@
-first name inpyt  type text
-last name 
-id input type number
-passsword input type password
-skills 
-gender input type gender 2 input field
-type check box
-select ---- option ----dep_ cse-eee-bba
-address type address 
-email type file
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        input[type="button"]
+        {
+            width:100%;
+            height:100%;
+        }
+        body
+        {
+          width: 100%;
+          height: 100%;
+          display: flex;
+        }
+        .calculator{
+            border: 1px solid #717377;
+            padding: 20px;
+            border-radius: 16;
+        }
+    </style>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
+</head>
+<body>
+    <script>
+        function pick (val)
+         {
+            document.getElementById("a").value+=val;
+        }
 
-input sumbit button
-reset button 
-button
+         function solve() 
+         {
+           var x=document.getElementById("a").value;
+           var y=eval(x);
+           document.getElementById("a").value=y;
+        }
+
+        function clr()
+         {
+            document.getElementById("a").value= " ";
+        }
+    </script>
+    <table>
+<tr>
+   <th colspan="3"><input type="text" id="a">
+    <th><input type="button" value="C" onclick="clr()"> 
+</tr>
+<tr>
+    <th><input type="button" value="1" onclick="pick(1)"> 
+        <th><input type="button" value="2" onclick="pick(2)"> 
+            <th><input type="button" value="3" onclick="pick(3)"> 
+                <th><input type="button" value="/" onclick="pick('/')"> 
+
+</tr>
+<tr>
+    <th><input type="button" value="4" onclick="pick(4)"> 
+        <th><input type="button" value="5" onclick="pick(5)"> 
+            <th><input type="button" value="6" onclick="pick(6)"> 
+                <th><input type="button" value="*" onclick="pick('*')"> 
+
+</tr>
+<tr>
+    <th><input type="button" value="7" onclick="pick(7)"> 
+        <th><input type="button" value="8" onclick="pick(8)"> 
+            <th><input type="button" value="9" onclick="pick(9)"> 
+                <th><input type="button" value="-" onclick="pick('-')"> 
+
+</tr>
+<tr>
+    <th><input type="button" value="." onclick="pick('.')"> 
+        <th><input type="button" value="0" onclick="pick(0)"> 
+            <th><input type="button" value="=" onclick="solve()"> 
+                <th><input type="button" value="+" onclick="pick('+')"> 
+
+</tr>
+    </table>
+</body>
+</html>
