--- a/namevalidation.html
+++ b/namevalidation.html
@@ -17,7 +17,7 @@
             error.textContent = '';
 
             if (name === "") {
-                alert("Name cannot be empty!");
+                alert("Name cann't be empty!");
                 error.textContent = "Name cannot be empty!";
                 return false;
             }
